Bug fix: Changed z-index of triggered mobile menu so that it doesn't display below the billboard on home page.

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -88,6 +88,7 @@
         left: 0px;
         top: 80px;
         width: 100%;
+        z-index: 1;
       }
 
       .page-link {
